--- a/club-viejuner.html
+++ b/club-viejuner.html
@@ -50,7 +50,7 @@
       <input type="email" id="email" name="email" placeholder="email" tabindex="8"><br><br>
 
       <label for="tel">Teléfono:</label><br>
-      <input type="tel" id="tel" name="tel" placeholder="teléfono" tabindex="9"><br><br>
+      <input type="tel" id="tel" name="tel" placeholder="123-45-67" tabindex="9"><br><br>
 
     </fieldset><br><br>
 
